--- a/index.html
+++ b/index.html
@@ -31,17 +31,16 @@
 
 	<div id="container" style="margin-left:25%">
 		<div class="w3-container spacer">
-		  	<div id="home_content" class="content"></div>
+		  	<div id="home_content" class="content inside"></div>
 			<div id="all_content" class="content"></div>
 			<div id="category_content" class="content"></div>
 			<div id="settings_content" class="content"></div>
 			<div id="help_content" class="content"></div>
-			<div id="newReminder" class="content inside"></div>
+			<div id="newReminder" class="modal modal-fixed-footer"></div>
 		</div>
-		<div  id="floatingIcon" >
+		<div  id="floatingIcon" class="modal-trigger" href="#newReminder">
 			<a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a>
 		</div>
-
 		<div id="closeIcon" >
 			<i class="small material-icons">power_settings_new</i>
 		</div>
