added category and alert on all reminders list

--- a/main.html
+++ b/main.html
@@ -59,9 +59,9 @@
         <!-- Page Content -->
         <div id="page-content-wrapper">
             <div class="alert alert-success alert-dismissible displayNone" id="savedAlert" role="alert">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <strong>Saved!</strong> Reminder has been added to your list.
-    </div>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <strong>Saved!</strong> Reminder has been added to your list.
+            </div>
             <div class="container-fluid" id="containerDiv"></div>
         </div>
         <!-- /#page-content-wrapper -->
@@ -96,6 +96,10 @@
     <script src="js/script.js"></script>
 
     <script src="js/bootstrap-switch.min.js"></script>
+
+    <!-- <script src="js/nedb.min.js"></script> -->
+
+    <!-- <script src="js/db.js"></script> -->
 
 </body>
 
