--- a/main.html
+++ b/main.html
@@ -85,7 +85,7 @@
         <!-- Modal -->
         <div id="newReminderModal" class="modal fade" role="dialog"></div>
         <div id="editReminderModal" class="modal fade" role="dialog"></div>
-
+        <div id="alertNotify" class="modal fade bs-example-modal-sm" role="dialog" aria-labelledby="mySmallModalLabel"></div>
         <!-- Alert -->
         <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="alert" id="confirmationDialog">
           <div class="modal-dialog modal-sm" role="document">
