rearraged js and css libraries

--- a/main.html
+++ b/main.html
@@ -13,14 +13,14 @@
     <title>Axa Reminder</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/lib/bootstrap.min.css" rel="stylesheet">
 
-    <link href="css/bootstrap-datetimepicker.css"  rel="stylesheet" >
+    <link href="css/lib/bootstrap-datetimepicker.css"  rel="stylesheet" >
 
     <!-- Custom CSS -->
     <link href="css/simple-sidebar.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/bootstrap-switch.min.css" rel="stylesheet">
+    <link href="css/lib/bootstrap-switch.min.css" rel="stylesheet">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
 
@@ -114,16 +114,16 @@
         // window.Hammer = require('./js/hammer.min.js');
     </script>
 
-    <script src="js/moment.min.js"></script>
+    <script src="js/lib/moment.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/lib/bootstrap.min.js"></script>
 
-    <script src="js/bootstrap-datetimepicker.min.js"></script>
+    <script src="js/lib/bootstrap-datetimepicker.min.js"></script>
 
     <script src="js/script.js"></script>
 
-    <script src="js/bootstrap-switch.min.js"></script>
+    <script src="js/lib/bootstrap-switch.min.js"></script>
 
     <!-- <script src="js/nedb.min.js"></script> -->
 
