--- a/main.html
+++ b/main.html
@@ -17,6 +17,7 @@
     <link href="css/simple-sidebar.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/lib/bootstrap-switch.min.css" rel="stylesheet">
+    <link href="css/lib/bootstrap-colorpicker.min.css" rel="stylesheet">
     <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
 
 </head>
@@ -108,6 +109,7 @@
     <script src="js/lib/bootstrap-datetimepicker.min.js"></script>
     <script src="js/script.js"></script>
     <script src="js/lib/bootstrap-switch.min.js"></script>
+    <script src="js/lib/bootstrap-colorpicker.js"></script>
 
 </body>
 </html>
