--- a/main.html
+++ b/main.html
@@ -74,6 +74,9 @@
         <div  id="floatingIcon" class="modal-trigger" href="#newReminder">
             <a href="#" class="btn btn-default btn-circle" data-toggle="modal" data-target="#newReminderModal" ><i class="fa fa-plus fa-2x"></i></a>
         </div>
+        <div  id="newCatBtn" class="modal-trigger">
+            <a href="#" class="btn btn-default btn-circle" data-toggle="modal" data-target="#newCategoryModal" ><i class="fa fa-plus fa-2x"></i></a>
+        </div>
         <!-- Modals -->
         <div id="newReminderModal" class="modal fade" role="dialog"></div>
         <div id="editReminderModal" class="modal fade" role="dialog"></div>
@@ -97,6 +100,8 @@
             </div>
           </div>
         </div>
+        <div id="newCategoryModalDiv"></div>
+
     </div>
     <!-- /#wrapper -->
 
