--- a/main.html
+++ b/main.html
@@ -100,6 +100,25 @@
             </div>
           </div>
         </div>
+        <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="alert" id="catConfirmationDialog">
+          <div class="modal-dialog modal-sm" role="document">
+            <div class="modal-content">
+                <div class="modal-header smodal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">Confirm Category Deletion</h4>
+                </div>
+                <div class="modal-body smodal-body">
+                    <p>Are you sure?</p>
+                </div>
+                <div class="modal-footer smodal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal" id="delCatConfirmation">Delete</button>
+                    <input type="hidden" id="catModelID" value=""/>
+                    <input type="hidden" id="catModelName" value=""/>
+                </div>
+            </div>
+          </div>
+        </div>
         <div id="newCategoryModalDiv"></div>
 
     </div>
