modified style and added overdue count

--- a/main.html
+++ b/main.html
@@ -34,7 +34,7 @@
                     </a>
                 </li>
                 <li class="sidebarItem selected" id="upcoming">
-                    <a href="#">Up Coming</a>
+                    <a href="#">Home</a>
                 </li>
                 <li class="sidebarItem" id="all_reminders">
                     <a href="#">All Reminders</a>
