modified settings style

--- a/main.html
+++ b/main.html
@@ -34,16 +34,16 @@
                     </a>
                 </li>
                 <li class="sidebarItem selected" id="upcoming">
-                    <a href="#">Home</a>
+                    <a href="#">Home<span class="pull-left sidebarSpan hidden-xs showopacity glyphicon glyphicon-home"></span></a>
                 </li>
                 <li class="sidebarItem" id="all_reminders">
-                    <a href="#">All Reminders</a>
+                    <a href="#">All Reminders<span class="pull-left sidebarSpan hidden-xs showopacity glyphicon glyphicon glyphicon-tasks"></span></a>
                 </li>
                 <li class="sidebarItem" id="category">
-                    <a href="#">Categories</a>
+                    <a href="#">Categories<span class="pull-left sidebarSpan hidden-xs showopacity glyphicon glyphicon-th-list"></span></a>
                 </li>
                 <li class="sidebarItem" id="settings">
-                    <a href="#">Settings</a>
+                    <a href="#">Settings<span class="pull-left sidebarSpan hidden-xs showopacity glyphicon glyphicon glyphicon-cog"></span></a>
                 </li>
             </ul>
         </div>
