modified header title and icons

--- a/main.html
+++ b/main.html
@@ -30,7 +30,8 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="#" id="title">
-                        Axa Reminder
+                    <img id="headerIcon" src="assets/icon.png" style="float: left;">
+                        <span id="headerTitle">Axa Reminder</span>
                     </a>
                 </li>
                 <li class="sidebarItem selected" id="upcoming">
@@ -40,7 +41,7 @@
                     <a href="#">All Reminders<span class="pull-left sidebarSpan hidden-xs showopacity glyphicon glyphicon glyphicon-tasks"></span></a>
                 </li>
                 <li class="sidebarItem" id="category">
-                    <a href="#">Categories<span class="pull-left sidebarSpan hidden-xs showopacity glyphicon glyphicon-th-list"></span></a>
+                    <a href="#">Categories<span style="font-size: 16px; padding-top: 13px;" class="pull-left sidebarSpan hidden-xs showopacity glyphicon glyphicon-tags"></span></a>
                 </li>
                 <li class="sidebarItem" id="settings">
                     <a href="#">Settings<span class="pull-left sidebarSpan hidden-xs showopacity glyphicon glyphicon glyphicon-cog"></span></a>
