Capitalized header tabs

--- a/main.html
+++ b/main.html
@@ -67,8 +67,7 @@
             <div class="container-fluid" id="containerDiv"></div>
         </div>
         <!-- /#page-content-wrapper -->
-
-        <div  id="closeIcon" class="modal-trigger fa fa-close fa-2x" href="#newReminder"></div>
+        <div  id="closeIcon" class="modal-trigger fa fa-close fa-2x"></div>
         <div  id="floatingIcon" class="modal-trigger" href="#newReminder">
             <a href="#" class="btn btn-default btn-circle" data-toggle="modal" data-target="#newReminderModal" ><i class="fa fa-plus fa-2x"></i></a>
         </div>
